Added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
           </div>
         </div>
       </div>
-    </div>
+      <div class="link">
+        <a href="https://github.com/askschmidt/weather-app-draft" target="_blank">Open source code</a>
+        <span>by Sara Schmidt</span>
+      </div>
     <script src="src/index.js"></script>
   </body>
 </html>
